src/test/ui/polymorphization/type_parameters/functions.stderr
error: item has unused generic parameters
  --> $DIR/functions.rs:11:8
   |
LL | pub fn unused<T>() {
   |        ^^^^^^ - generic parameter `T` is unused

error: item has unused generic parameters
  --> $DIR/functions.rs:38:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
LL |     // Function has an unused generic parameter from impl.
LL |     pub fn unused_impl() {
   |            ^^^^^^^^^^^

error: item has unused generic parameters
  --> $DIR/functions.rs:43:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn unused_both<G: Default>() {
   |            ^^^^^^^^^^^ - generic parameter `G` is unused

error: item has unused generic parameters
  --> $DIR/functions.rs:53:12
   |
LL | impl<F: Default> Foo<F> {
   |      - generic parameter `F` is unused
...
LL |     pub fn used_fn<G: Default>() {
   |            ^^^^^^^

error: aborting due to 4 previous errors

